--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stevengoh",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,14 +15,21 @@
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/dompurify": "^3.0.5"
   }
 }
