--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "dompurify": "^3.0.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "fast-average-color": "^9.4.0",
+    "framer-motion": "^11.14.4",
     "next": "13.4.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-photo-view": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.2.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
